objects/ASI_KOR_Brand__c.object
<CustomObject>
    <description>ASI KOR</description>
    <fields>
        <fullName>ASI_KOR_Brand_Code__c</fullName>
        <externalId>true</externalId>
        <label>Brand Code</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand_Type__c</fullName>
        <formula>if( ASI_KOR_Sequence__c =100, &quot;Local&quot;, if(ASI_KOR_Sequence__c=200,&quot;International&quot;,&quot;Spirits&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Brand Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CA_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CA Brand</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipName>Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_CN_Brand_Group__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand Group</label>
        <referenceTo>ASI_CRM_CN_Brand_Group__c</referenceTo>
        <relationshipName>Brand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Company__c</fullName>
        <label>Company</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Product_Categoray__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Category</label>
        <referenceTo>ASI_HK_CRM_Product_Category__c</referenceTo>
        <relationshipName>ASI_KOR_Brands</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Reporting_Brand__c</fullName>
        <label>Reporting Brand</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sequence_Number__c</fullName>
        <label>Sequence Number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sequence__c</fullName>
        <label>Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Sys_MobileCatalogCategoryNum__c</fullName>
        <formula>CASE( ASI_KOR_Brand_Code__c 
, &apos;XXX&apos;, 1
, &apos;YYY&apos;,1
,0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sys_MobileCatalogCategoryNum</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_UOM__c</fullName>
        <label>UOM</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Actual Case</fullName>
                </value>
                <value>
                    <fullName>Bottle</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_VMS_Brand_Code__c</fullName>
        <label>VMS Brand Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Brand</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ASI_KOR_Brand_Code__c</columns>
        <columns>ASI_KOR_Sequence__c</columns>
        <columns>ASI_KOR_Product_Categoray__c</columns>
        <columns>ASI_KOR_Company__c</columns>
        <columns>ASI_KOR_CN_Brand_Group__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Brand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brands</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>